# Squareline_studio

./: README.md
SquareLine_Project/: CMakeLists.txt  lv_conf.h  main.c
SquareLine_Project/myapi/: control_button.c  control_button.h  myapi.c  myapi.h  refresh_token.c  refresh_token.h  showmyapi.c  showmyapi.h  weatherapi.c  weatherapi.h
SquareLine_Project/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h
SquareLine_Project/ui/images/: ui_img_1027177112.c  ui_img_1078347737.c  ui_img_11111_png.c  ui_img_11_png.c  ui_img_12_00_png.c  ui_img_1302822862.c  ui_img_1490288613.c  ui_img_15_00_png.c  ui_img_1902665014.c  ui_img_194552828.c  ui_img_1_png.c  ui_img_2131548591.c  ui_img_2222_png.c  ui_img_247956599.c  ui_img_25_png.c  ui_img_30_74_png.c  ui_img_320661724.c  ui_img_34_png.c  ui_img_42_00_png.c  ui_img_433014539.c  ui_img_44_png.c  ui_img_45_png.c  ui_img_500_45_png.c  ui_img_54_png.c  ui_img_571830898.c  ui_img_668426069.c  ui_img_66_png.c  ui_img_777_png.c  ui_img_842616905.c  ui_img_8_30_png.c  ui_img_90_55_png.c  ui_img_960377382.c  ui_img_aiot_department_png.c  ui_img_air_quality_index_png.c  ui_img_bg_light2_png.c  ui_img_bg_light_1_png.c  ui_img_ch4_png.c  ui_img_co2_png.c  ui_img_co_png.c  ui_img_delivery_department_png.c  (+31 more)
SquareLine_Project/ui/screens/: ui_iconWeather.c
